컨트롤러 글쓰기 쪽 수정 리스트에서 글쓰기 클릭시 회원만 가능하고 비회원은 못쓰게 하고싶음

--- a/src/main/resources/templates/board/boardInsert.html
+++ b/src/main/resources/templates/board/boardInsert.html
@@ -33,6 +33,13 @@
             float: right;
         }
     </style>
+    <script>
+        $(function () {
+            $('#write').on('click', function () {
+                $('#form').submit();
+            })
+        })
+    </script>
 </head>
 <body>
 <div th:replace="fragment/nav :: nav"></div>
