--- a/src/main/resources/templates/fragment/nav.html
+++ b/src/main/resources/templates/fragment/nav.html
@@ -13,7 +13,7 @@
                 <a class="nav-link" href="/"> <font style = "vertical-align : inherit;"> <font style = "vertical-align : inherit;"> Home </font> </font> <span class = "sr-only"> <font style = "vertical-align : inherit;"> <font style = "vertical-align : inherit;"> (현재) </font> </font> </span > </a>
             </li>
             <li class = "nav-item">
-                <a class="nav-link" href="/board/list"> <font style = "vertical-align : inherit;"> <font style = "vertical-align : inherit;"> Board </font> </font> </a>
+                <a class="nav-link" href="/notice/list"> <font style = "vertical-align : inherit;"> <font style = "vertical-align : inherit;"> Board </font> </font> </a>
             </li>
 
             <li class = "nav-item" th:if="${session.member !=null}">
