--- a/src/main/resources/templates/member/memberOne.html
+++ b/src/main/resources/templates/member/memberOne.html
@@ -30,7 +30,11 @@
                 location.href='/member/modifyPw'
             });
             $('#delete').on('click',function () {
-                location.href='/member/delete'
+                var leave = confirm("정말 삭제하시겠습니까?");
+                if(leave) {
+                    console.log('leave')
+                    location.href = '/member/delete'
+                }
             });
         })
     </script>
