--- a/src/main/resources/templates/board/boardOne.html
+++ b/src/main/resources/templates/board/boardOne.html
@@ -19,18 +19,20 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
           integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-    <script>
+    <script th:inline="javascript">
+        /*<![CDATA[*/
         $(function () {
+            var num = [[${notice.num}]];
             $('#delete').on('click', function () {
                 var leave = confirm("정말 삭제하시겠습니까?");
                 if (leave) {
                     console.log('leave')
-                    location.href = '/notice/delete';
+                    location.href = '/notice/delete?num='+num;
                 }
             });
 
             $('#update').on('click', function () {
-                location.href = '/notice/modify';
+                location.href = '/notice/modify?num='+num;
             });
 
 
@@ -39,7 +41,7 @@
             });
         })
 
-
+        /*]]>*/
     </script>
 </head>
 <body>
