--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-   <!-- <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/JavaScript" href="js/bootstrap.min.js">
--->
+    <!-- <link rel="stylesheet" href="css/bootstrap.min.css">
+     <link rel="stylesheet" type="text/JavaScript" href="js/bootstrap.min.js">
+ -->
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
@@ -18,6 +18,7 @@
 
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         table {
             min-width: 50%;
@@ -39,7 +40,8 @@
         #write {
             float: right;
         }
-        a:hover{
+
+        a:hover {
 
         }
     </style>
@@ -67,13 +69,15 @@
             <th scope="col">Title</th>
             <th scope="col">hit</th>
             <th scope="col">createdDate</th>
-       </tr>
+        </tr>
         </thead>
         <tbody>
         <tr class="table-primary" th:each="board1 : ${notice}">
             <th scope="row" th:text="${board1.num}"></th>
             <td th:text="${board1.writer}"></td>
-            <td><a th:href="@{/notice/one(num=${board1.num})}"><span  th:text="${board1.title}"></span></a></td>
+            <td><a th:href="@{/notice/one(num=${board1.num})}">
+              <span th:text="${board1.title}"></span>
+            </a></td>
             <td th:text="${board1.hit}"></td>
             <td th:text="${board1.createdDate}"></td>
 
@@ -88,8 +92,10 @@
         <li class="page-item" th:if="${pager.prev}==true">
             <a class="page-link" th:href="@{/notice/list(page=${pager.startPage}-1,perPageNum=${pager.perPageNum})}">&laquo;</a>
         </li>
-        <li class="page-item" th:each="idx,iterStat : ${#numbers.sequence(pager.startPage, pager.endPage)}" th:classappend="${pager.page} == ${idx} ? active : null">
-            <a class="page-link" th:href="@{/notice/list(page=${idx},perPageNum=${pager.perPageNum})}" th:text="${idx}"></a>
+        <li class="page-item" th:each="idx,iterStat : ${#numbers.sequence(pager.startPage, pager.endPage)}"
+            th:classappend="${pager.page} == ${idx} ? active : null">
+            <a class="page-link" th:href="@{/notice/list(page=${idx},perPageNum=${pager.perPageNum})}"
+               th:text="${idx}"></a>
         </li>
         <li class="page-item" th:if="${pager.next}==true and ${pager.endPage >0}">
             <a class="page-link" th:href="@{/notice/list(page=${pager.endPage}+1,perPageNum=${pager.perPageNum})}">&raquo;</a>
