--- a/src/main/resources/templates/board/boardOne.html
+++ b/src/main/resources/templates/board/boardOne.html
@@ -27,12 +27,12 @@
                 var leave = confirm("정말 삭제하시겠습니까?");
                 if (leave) {
                     console.log('leave')
-                    location.href = '/notice/delete?num='+num;
+                    location.href = '/notice/delete?num=' + num;
                 }
             });
 
             $('#update').on('click', function () {
-                location.href = '/notice/modify?num='+num;
+                location.href = '/notice/modify?num=' + num;
             });
 
 
@@ -69,9 +69,13 @@
     </div>
 
     <div class="row">
-        <div class="col-sm-12 d-flex" style="background-color:#ffb0d3;">
-            <button type="button" class="btn btn-primary mr-2" id="update" th:if="${notice.writer.equals(session.member.id)}">수정</button>
-            <button type="button" class="btn btn-primary" id="delete" th:if="${notice.writer.equals(session.member.id)}">삭제</button>
+        <div class="col-sm-12 d-flex" style="background-color:#ffb0d3;" th:if="${session.member !=null}">
+            <button type="button" class="btn btn-primary mr-2" id="update"
+                    th:if="${notice.writer.equals(session.member.id)}">수정
+            </button>
+            <button type="button" class="btn btn-primary" id="delete"
+                    th:if="${notice.writer.equals(session.member.id)}">삭제
+            </button>
             <button type="button" class="btn btn-primary ml-auto" id="list">목록</button>
         </div>
 
@@ -81,12 +85,12 @@
         <div class="col-sm-12 p-2" style="background-color:lavender; text-align: left; border:  1px red solid ;">댓글
         </div>
 
-        <!--댓글이 생기면 아작스로 가져오면 될 거같다-->
-        <div class="col-sm-12 pl-2 pb-0" style="background-color:#ffb0d3; ">
-            <div class="col-sm-12">아이디</div>
+        <!--댓글 창 ,,,댓글이 생기면 아작스로 가져오면 될 거같다-->
+        <div class="col-sm-12 pl-2 pb-0" id="commentList" style="background-color:#ffb0d3; ">
+         <!--   <div class="col-sm-12">아이디</div>
             <div class="col-sm-12"><span class="badge badge-pill badge-primary">2020/02/08</span></div>
         </div>
-        <div class="col-sm-12" style="background-color:lavender; text-align: left; height: 300px; ">내용</div>
+        <div class="col-sm-12" style="background-color:lavender; text-align: left; height: 300px; ">내용--></div>
     </div>
     <!--댓글 입력창 -->
     <div class="row" th:if="${session.member !=null}">
@@ -96,7 +100,8 @@
         </div>
         <div class="col-sm-10" style="background-color:lavenderblush;">
             <form id="form" action="/" method="post">
-                <input type="hidden" value="id">
+                <input type="hidden" name="writer" th:value="${session.member.id}">
+                <input type="hidden" name="bNum" th:value="${notice.num}">
                 <label for="content"></label>
                 <textarea class="" id="content" name="content" placeholder="댓글달기"
                           style="height: 100px; width: 100%;"></textarea>
@@ -109,11 +114,13 @@
     <div class="row" th:unless="${session.member !=null}">
         <div class="col-sm-12 pl-2 pb-0" style="background-color:#ffb0d3; ">
 
-            <div class="col-sm-12" style="background-color:#99abff; text-align: center;"><a th:href="@{/member/login}"><span
+            <div class="col-sm-12" style="background-color:#99abff; text-align: center;"><a
+                    th:href="@{/member/login}"><span
                     th:text="로그인"></span></a>해야 댓글을 달 수 있습니다.
             </div>
         </div>
     </div>
+           <div th:include="board/commet :: commet"></div>
 
 </div>
 
