--- a/src/main/resources/templates/board/boardOne.html
+++ b/src/main/resources/templates/board/boardOne.html
@@ -99,7 +99,7 @@
             <div class="col-sm-12" style="background-color:#99abff;" th:text="${session.member.id}"></div>
         </div>
         <div class="col-sm-10" style="background-color:lavenderblush;">
-            <form id="form" action="/" method="post">
+            <form id="form" method="post">
                 <input type="hidden" name="writer" th:value="${session.member.id}">
                 <input type="hidden" name="bNum" th:value="${notice.num}">
                 <label for="content"></label>
