--- a/src/main/resources/templates/board/commet.html
+++ b/src/main/resources/templates/board/commet.html
@@ -19,13 +19,14 @@
             type:'get',
             data:{'bNum':bNum},
             success: function (data) {
+                console.log(data);
                 var a ='';
                 $.each(data, function(key, value){
                     a += '<div class="commentArea" style="border-bottom:1px solid darkgray; margin-bottom: 15px;">';
-                    a += '<div class="commentInfo'+value.cNum+'">'+'댓글번호 : '+value.cNum+' / 작성자 : '+value.writer;
-                    a += '<a onclick="commentUpdate('+value.cNum+',\''+value.content+'\');"> 수정 </a>';
-                    a += '<a onclick="commentDelete('+value.cNum+');"> 삭제 </a> </div>';
-                    a += '<div class="commentContent'+value.cNum+'"> <p> 내용 : '+value.content +'</p>';
+                    a += '<div class="commentInfo'+value.cnum+'">'+'댓글번호 : '+value.cnum+' / 작성자 : '+value.writer;
+                    a += '<a onclick="commentUpdate('+value.cnum+',\''+value.content+'\');"> 수정 </a>';
+                    a += '<a onclick="commentDelete('+value.cnum+')"> 삭제 </a> </div>';
+                    a += '<div class="commentContent'+value.cnum+'"> <p> 내용 : '+value.content +'</p>';
                     a += '</div></div>';
                 });
 
@@ -50,25 +51,25 @@
 
     }
     //댓글 수정 - 댓글 내용 출력을  input 폼으로 변경
-    function commentUpdate(cNum, content) {
+    function commentUpdate(cnum, content) {
         var a='';
         a += '<div class="input-group">';
-        a += '<input type="text" class="form-control" name="content_'+cNum+'" value="'+content+'"/>';
-        a += '<span class="input-group-btn"><button class="btn btn-default" type="button" onclick="commentUpdateProc('+cNum+');">수정</button> </span>';
+        a += '<input type="text" class="form-control" name="content_'+cnum+'" value="'+content+'"/>';
+        a += '<span class="input-group-btn"><button class="btn btn-default" type="button" onclick="commentUpdateProc('+cnum+');">수정</button> </span>';
         a += '</div>';
 
-        $('.commentContent'+cNum).html(a);
+        $('.commentContent'+cnum).html(a);
 
     }
 
     //댓글수정
-    function commentUpdateProc(cNum) {
-        var updateContent = $('[name=content_'+cNum+']').val();
+    function commentUpdateProc(cnum) {
+        var updateContent = $('[name=content_'+cnum+']').val();
 
         $.ajax({
             url: '/reply/update',
             type: 'post',
-            data: {'content': updateContent, 'cNum': cNum},
+            data: {'content': updateContent, 'cNum': cnum},
             success: function (data) {
                 if(data==1) commentList(bNum); //댓글 수정 후 목록 출력
             }
@@ -76,9 +77,9 @@
     }
 
     //댓글 삭제
-    function commentDelete(cNum) {
+    function commentDelete(cnum) {
         $.ajax({
-            url: '/reply/delete'+cNum,
+            url: '/reply/delete/'+cnum,
             type: 'post',
             success: function (data) {
                 if(data==1) commentList(bNum); //댓글 수정 후 목록 출력
