--- a/src/main/resources/templates/fragment/nav.html
+++ b/src/main/resources/templates/fragment/nav.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
 
-<nav class = "navbar navbar-expand-lg navbar-dark bg-primary" th:fragment="nav">
+<nav class = "navbar navbar-expand-lg navbar-dark bg-dark" th:fragment="nav">
     <a class="navbar-brand" href="/"> <font style = "vertical-align : inherit;"> <font style = "vertical-align : inherit;"> WoomShop </font> </font> </a>
     <button class = "navbar-toggler"type = "button"data-toggle = "collapse"data-target = "# navbarColor01"aria-controls = "navbarColor01"aria-expanded = "false"aria-label = "탐색 ">
         <span class = "navbar-toggler-icon"> </span>
