--- a/src/main/resources/templates/board/commet.html
+++ b/src/main/resources/templates/board/commet.html
@@ -19,20 +19,14 @@
             type:'get',
             data:{'bNum':bNum},
             success: function (data) {
-                console.log(data);
                 var a ='';
                 $.each(data, function(key, value){
-                    a+='<div class="col-sm-12 commentArea" >';
-                    a+='<div class="col-sm-12">'+value.writer+'</div>';
-                    a+='<div class="col-sm-12 d-inline commentInfo'+value.cnum+'" >'+'댓글번호 : '+value.cnum;
-                    a+=' <span class="badge badge-pill badge-primary">'+value.reg_date+'</span></div>';
-                    a+=' <div class="col-sm-1 d-inline btn">';
-                    a+='<a  onclick="commentUpdate('+value.cnum+',\''+value.content+'\');"> <i class="fas fa-edit"></i> </a></div>';
-                    a+='<div class="col-sm-1 d-inline btn">';
-                    a+='<a onclick="commentDelete('+value.cnum+')"><i class="far fa-trash-alt"></i> </a></div>';
-                    a+='</div>';
-                    a+=' <div class="col-sm-12 commentContent'+value.cnum+'" style="border-bottom: black solid 1px; "> <p> '+value.content +'</p></div>';
-
+                    a += '<div class="commentArea" style="border-bottom:1px solid darkgray; margin-bottom: 15px;">';
+                    a += '<div class="commentInfo'+value.cNum+'">'+'댓글번호 : '+value.cNum+' / 작성자 : '+value.writer;
+                    a += '<a onclick="commentUpdate('+value.cNum+',\''+value.content+'\');"> 수정 </a>';
+                    a += '<a onclick="commentDelete('+value.cNum+');"> 삭제 </a> </div>';
+                    a += '<div class="commentContent'+value.cNum+'"> <p> 내용 : '+value.content +'</p>';
+                    a += '</div></div>';
                 });
 
                 $('#commentList').html(a);
@@ -49,32 +43,32 @@
             success: function (data) {
                 if(data==1){
                     commentList(); //댓글 작성 후 댓글 목록 reload
-                    $('#content').val('');
+                    $('#content').text('');
                 }
             }
         })
 
     }
     //댓글 수정 - 댓글 내용 출력을  input 폼으로 변경
-    function commentUpdate(cnum, content) {
+    function commentUpdate(cNum, content) {
         var a='';
         a += '<div class="input-group">';
-        a += '<input type="text" class="form-control" name="content_'+cnum+'" value="'+content+'"/>';
-        a += '<span class="input-group-btn"><button class="btn btn-default" type="button" onclick="commentUpdateProc('+cnum+');">수정</button> </span>';
+        a += '<input type="text" class="form-control" name="content_'+cNum+'" value="'+content+'"/>';
+        a += '<span class="input-group-btn"><button class="btn btn-default" type="button" onclick="commentUpdateProc('+cNum+');">수정</button> </span>';
         a += '</div>';
 
-        $('.commentContent'+cnum).html(a);
+        $('.commentContent'+cNum).html(a);
 
     }
 
     //댓글수정
-    function commentUpdateProc(cnum) {
-        var updateContent = $('[name=content_'+cnum+']').val();
+    function commentUpdateProc(cNum) {
+        var updateContent = $('[name=content_'+cNum+']').val();
 
         $.ajax({
             url: '/reply/update',
             type: 'post',
-            data: {'content': updateContent, 'cNum': cnum},
+            data: {'content': updateContent, 'cNum': cNum},
             success: function (data) {
                 if(data==1) commentList(bNum); //댓글 수정 후 목록 출력
             }
@@ -82,9 +76,9 @@
     }
 
     //댓글 삭제
-    function commentDelete(cnum) {
+    function commentDelete(cNum) {
         $.ajax({
-            url: '/reply/delete/'+cnum,
+            url: '/reply/delete'+cNum,
             type: 'post',
             success: function (data) {
                 if(data==1) commentList(bNum); //댓글 수정 후 목록 출력
